<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="google">G+</string>
    <string name="facebook">f</string>
    <string name="or">OR</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="btntext">Login</string>
    <string name="notregisterad">Not registerad?</string>
    <string name="creatAccount">Cereat Account</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>


</resources>